makko/default/xyzzy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xyzzy
  labels:
    app: xyzzy
spec:
  revisionHistoryLimit: 1
  replicas: 0
  selector:
    matchLabels:
      app: xyzzy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: xyzzy
    spec:
      containers:
      - image: emcniece/dockeryourxyzzy:latest
        name: xyzzy
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: 1.5Gi
            ephemeral-storage: 128Mi
          requests:
            cpu: 50m
            memory: 1Gi
