makko/default/xyzzy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xyzzy
spec:
  selector:
    app: xyzzy
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
