makko/default/xyzzy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xyzzy
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "xyzzy.senk0.com"
  rules:
    - backendRefs:
        - name: xyzzy
          port: 8080
